--- a/untitled_app/lib/localization/l10n/app_es.arb
+++ b/untitled_app/lib/localization/l10n/app_es.arb
@@ -86,38 +86,6 @@
     "logOut":"Cerrar Sesión",
     "deleteAccount":"Borrar Cuenta",
     "darkMode":"Modo oscuro",
-    "addComment":"Añadir comentario",
-    "settings":"Settings",
-    "welcome":"Welcome",
-    "welcomeTo":"Welcome to",
-    "welcomeBack":"Welcome Back",
-    "createAccount":"Create Account",
-    "createAnAccount":"Create an Account",
-    "cont":"Continue",
-    "dateOfBirth":"Date of Birth",
-    "createAPassword":"Create a Password",
-
-    "deleteAcountTitle":"Are you sure you want to delete your account?",
-    "deleteAcountBody":"All account data will be deleted. This action cannot be undone. Press \"Go Back\" to cancel",
-    "delete":"Delete",
-    "save":"Save",
-    "searchUsername":"Search username...",
-    "noResultsFound":"No results found.",
-    "confirmation":"Confirmation",
-    "cancel":"Cancel",
-    "resetPassword":"Reset Password",
-    "sendResetLink":"Send reset link",
-    "ok":"Ok",
-    "recentActivity":"Recent Activity",
-    "nothingToSeeHere":"Nothing to see here!",
-    "commentText":"Someone commented on your post:",
-    "groups":"Groups",
-    "next":"Next",
-    "description":"Description(Optional)",
-    "skip":"Skip",
-    "done":"Done",
-    "public":"Public",
-    "selectAudience":"Select Audience:",
-    "myGroups":"My groups",
-    "reply":"Reply"
+    "addComment":"Añadir comentario"
+    
 }
