--- a/untitled_app/lib/localization/l10n/app_en.arb
+++ b/untitled_app/lib/localization/l10n/app_en.arb
@@ -187,7 +187,7 @@
     "deletePostWarningBody":"Are you sure you wish to procede? This action cannot be undone.",
 
     "invalidSession":"This Eko account is being used on another device. Press below to continue on this device.",
-    "birthday":"Brithday",
+    "birthday":"Birthday",
     "month":"Month",
     "day":"Day",
     "year":"Year",
